# fsai

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
crates/fsai-starter/: Cargo.toml
crates/fsai-starter/src/: main.rs  scanner.rs
crates/resource-manager/: Cargo.toml
crates/resource-manager/docs/: fsai.graphml
crates/resource-manager/src/: fs_resource.rs  harvester.rs  lib.rs  resource.rs  transaction_resource.rs  version.rs
crates/resource-manager/src/harvesters/: fs.rs  mod.rs  transactions.rs
crates/resource-unit/: Cargo.toml
crates/resource-unit/src/: lib.rs
